# gautodoc

./: README.md  analysis.py  basic.css  common.py  flake.nix  gautodoc  gbuild.py  gconfig.py  gdoc.py  pyproject.toml  registry.py
src/: gautodoc.py  gbuild.py  gconfig.py  registry.py
template/: index.html
template/modules/: gdoc.mjs
template/styles/: gdoc.css
