[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gautodoc"
version = "1.0.0"
authors = [
    { name = "Garrison Hinson-Hasty", email = "garrisonhh+dev@pm.me" },
]
description = "stupid simple autodoc"
readme = "README.md"
requires-python = ">=3.11<4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: FAFOLv2 License",
    "Operating System :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/garrisonhh/gautodoc"
"Bug Tracker" = "https://github.com/garrisonhh/gautodoc/issues"
